--- a/Example/CoinpaprikaAPI.xcodeproj/xcshareddata/xcschemes/CoinpaprikaAPI-Example.xcscheme
+++ b/Example/CoinpaprikaAPI.xcodeproj/xcshareddata/xcschemes/CoinpaprikaAPI-Example.xcscheme
@@ -40,7 +40,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "98AEBDE297993714B840FD772BB32E0A"
+            BuildableName = "CoinpaprikaAPI.framework"
+            BlueprintName = "CoinpaprikaAPI"
+            ReferencedContainer = "container:Pods/Pods.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
