--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,8 +1,8 @@
 use_frameworks!
 
-platform :ios, 9.0
-
 target 'CoinpaprikaAPI_Example' do
+  platform :ios, 9.0
+  
   pod 'CoinpaprikaAPI', :path => '../'
 
   target 'CoinpaprikaAPI_Tests' do
@@ -13,6 +13,8 @@ target 'CoinpaprikaAPI_Example' do
 end
 
 target 'CoinpaprikaAPI_Example_tvOS' do
+    platform :tvos, 12.0
+    
     pod 'CoinpaprikaAPI', :path => '../'
     
     target 'CoinpaprikaAPI_Example_tvOSTests' do
@@ -23,6 +25,8 @@ target 'CoinpaprikaAPI_Example_tvOS' do
 end
 
 target 'CoinpaprikaAPI_Example_macOS' do
+    platform :osx, 10.14
+    
     pod 'CoinpaprikaAPI', :path => '../'
     
     target 'CoinpaprikaAPI_Example_macOSTests' do
