--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@
 # * https://www.objc.io/issues/6-build-tools/travis-ci/
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode10.2
+osx_image:
+- xcode10.1
+- xcode10.2
+
 language: swift
 cache: cocoapods
 podfile: Example/Podfile
