--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,28 @@
 # * https://www.objc.io/issues/6-build-tools/travis-ci/
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode10.2
 language: swift
-cache: cocoapods
-podfile: Example/Podfile
+
+osx_image:
+- xcode10.1
+- xcode10.2
+
+env:
+- SWIFT_VERSION=5.0
+- SWIFT_VERSION=4.2
+
+matrix:
+  exclude:
+  - osx_image: xcode10.1
+    env: SWIFT_VERSION=5.0
+
+cache:
+- cocoapods
+- bundler
+
 before_install:
-- gem install cocoapods --pre # Since Travis is not always on latest version
-- pod install --project-directory=Example
+- gem install bundler
+- bundle install
+
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/CoinpaprikaAPI.xcworkspace -scheme CoinpaprikaAPI-Example -destination "platform=iOS Simulator,name=iPhone XR" ONLY_ACTIVE_ARCH=NO CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO | xcpretty
-- pod lib lint
+  - bundle exec fastlane run_ci
