--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ osx_image:
 - xcode10.2
 
 script:
-  - swift test
+  - xcodebuild -scheme Coinpaprika-Package build test
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
